--- a/Receitas/Frango.html
+++ b/Receitas/Frango.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <header>
-    <h1>Frango Assado (Air Fryer)</h1>
+    <h1>Frango Crocante (Air Fryer)</h1>
   </header>
 
   <main>
