--- a/Receitas/Frango.html
+++ b/Receitas/Frango.html
@@ -8,7 +8,7 @@
     /* simples, leve e pronto para rodar dentro do iframe "conteudo" */
     html, body { height: 100%; margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
     body { display: flex; flex-direction: column; background: #fff; color: #111; }
-    header { background: #f2f2f2; border-bottom: 1px solid #e5e7eb; padding: 10px; text-align: center; }
+    header { background: #f2f2f2; border-bottom: 1px solid #d9dfea; padding: 10px; text-align: center; }
     header h1 { margin: 0; font-size: 16px; }
 
     /* conteúdo rolável */
@@ -33,7 +33,7 @@
 
     <div class="foto">
       <!-- use a imagem fornecida no repositório -->
-      <img src="../frango.jpg" alt="Frango assado crocante" />
+      <img src="../Imagens/frango.jpg" alt="Frango assado crocante" />
     </div>
 
     <h2>Ingredientes</h2>
