--- a/Telas/Restrições2.html
+++ b/Telas/Restrições2.html
@@ -66,7 +66,7 @@
     <main>
       <ul>
         <li>
-          <a class="card" href="Receita-OmeleteDeCogumelos.html" target="conteudo" aria-label="Abrir Omelete de Cogumelos">
+          <a class="card" href="../NãoCriada.html" target="conteudo" aria-label="Abrir Omelete de Cogumelos">
             <div>
               <div class="titulo">Omelete de Cogumelos</div>
               <div class="chips" aria-label="Selo de características">
@@ -80,7 +80,7 @@
         </li>
 
         <li>
-          <a class="card" href="Receita-AbobrinhaRecheada.html" target="conteudo" aria-label="Abrir Abobrinha Recheada">
+          <a class="card" href="../NãoCriada.html" target="conteudo" aria-label="Abrir Abobrinha Recheada">
             <div>
               <div class="titulo">Abobrinha Recheada</div>
               <div class="chips">
@@ -108,7 +108,7 @@
         </li>
 
         <li>
-          <a class="card" href="Receita-BananaAssadaComCanela.html" target="conteudo" aria-label="Abrir Banana Assada com Canela">
+          <a class="card" href="../NãoCriada.html" target="conteudo" aria-label="Abrir Banana Assada com Canela">
             <div>
               <div class="titulo">Banana Assada com Canela</div>
               <div class="chips">
@@ -122,10 +122,6 @@
         </li>
       </ul>
     </main>
-
-    <!-- Dicas:
-         • Altere os href para os nomes reais das páginas de receita no seu repositório.
-         • Os chips usam abreviações (SG, SL, etc.) para lembrar os selos desenhados no sketch. -->
     <footer></footer>
   </body>
 </html>
