--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <title>SIMPLeat</title>
     <style>
-      /* Simples, sem dependências: moldura de celular + header, main com iframe e nav */
       html, body { height: 100%; margin: 0; font-family: sans-serif; }
       body { display: flex; align-items: center; justify-content: center; background: #e5e5e5; }
-      .phone { width: 375px; height: 667px; background: #fff; border: 1px solid #ccc; border-radius: 16px; overflow: hidden; display: flex; flex-direction: column; }
-      header { background: #f2f2f2; padding: 8px; text-align: center; }
-      header h1 { margin: 0; font-size: 18px; }
+      .phone { width: 375px; height: 667px; background: #fff; border: 1px solid #d0c5cd; border-radius: 16px; overflow: hidden; display: flex; flex-direction: column; }
+      header { background: #dcaad0; padding: 8px; text-align: center; }
+        header h1 {
+    margin: 0;
+    font-size: 28px;    
+    font-weight: 900;   
+    color: #fff;        
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.3); 
+    font-family: "Segoe UI", Roboto, sans-serif;
+  }
       main { flex: 1; background: #fff; }
       main iframe { width: 100%; height: 100%; border: none; }
-      nav { display: flex; justify-content: space-around; background: #f2f2f2; padding: 8px 0; }
+      nav { display: flex; justify-content: space-around; background: #dcaad0; padding: 8px 0; }
       nav a { text-decoration: none; font-size: 20px; color: #000; }
     </style>
   </head>
@@ -22,11 +28,9 @@
         <h1>SIMPLeat</h1>
       </header>
       <main>
-        <!-- O iframe carrega o conteúdo central -->
         <iframe src="Telas/Favoritos.html" name="conteudo"></iframe>
       </main>
       <nav>
-        <!-- Cada link abre dentro do iframe -->
         <a href="Telas/Favoritos.html" target="conteudo">⭐</a>
         <a href="Telas/Restrições.html" target="conteudo">🚫</a>
         <a href="Telas/Tempo.html" target="conteudo">⏳</a>
