Ajustes da versão com CSS

--- a/Telas/Favoritos.html
+++ b/Telas/Favoritos.html
@@ -31,7 +31,7 @@
   <main>
     <ul>
       <li>
-        <a class="card" href="NotFound.html" target="conteudo">
+        <a class="card" href="../NãoCriada.html" target="conteudo">
           <span>
             <span class="titulo">Purê de mandioquinha</span>
             <span class="tempo">⏳ 30 min</span>
