--- a/Telas/Restrições2.html
+++ b/Telas/Restrições2.html
@@ -1,127 +1,102 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Receitas – SIMPLeat</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-      /* Mantém o mesmo visual limpo usado na última tela */
-      :root{
-        --b:#1f2937;       /* texto principal */
-        --bd:#d1d5db;      /* bordas */
-        --muted:#6b7280;   /* texto secundário */
-        --card:#ffffff;    /* fundo do cartão */
-        --chip:#f3f4f6;    /* fundo dos chips */
-        --heart:#ef4444;   /* favorito */
-      }
-      html, body { height: 100%; margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
-      body { display: flex; flex-direction: column; background: #fff; color: var(--b); }
-      header { background: #f2f2f2; padding: 10px; text-align: center; border-bottom: 1px solid #e5e7eb; }
-      header h1 { margin: 0; font-size: 16px; letter-spacing: .2px; }
+<head>
+  <meta charset="UTF-8">
+  <title>Receitas – SIMPLeat</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { margin: 0; font-family: sans-serif; background: #fff; }
+    header { background: #f2f2f2; padding: 10px; text-align: center; border-bottom: 1px solid #e5e7eb; }
+    header h1 { margin: 0; font-size: 16px; }
 
-      main { flex: 1; min-height: 0; overflow: auto; padding: 14px; }
-      ul { list-style: none; margin: 0; padding: 0; display: grid; gap: 12px; }
+    main { flex: 1; padding: 14px; }
+    ul { list-style: none; margin: 0; padding: 0; display: grid; gap: 12px; }
 
-      /* Cartão clicável da receita */
-      a.card{
-        display: grid;
-        grid-template-columns: 1fr auto;
-        gap: 8px;
-        align-items: center;
-        text-decoration: none; color: inherit;
-        border: 1px solid var(--bd);
-        border-radius: 14px;
-        background: var(--card);
-        padding: 12px 14px;
-        box-shadow: 0 1px 0 rgba(0,0,0,.03);
-        transition: border-color .15s, transform .06s;
-      }
-      a.card:hover { border-color:#c7cad1; }
-      a.card:active { transform: translateY(1px); }
+    a.card {
+      display: grid;
+      grid-template-columns: 1fr auto;
+      gap: 8px;
+      align-items: center;
+      text-decoration: none; color: #1f2937;
+      border: 1px solid #d1d5db;
+      border-radius: 14px;
+      background: #fff;
+      padding: 12px 14px;
+      box-shadow: 0 1px 0 rgba(0,0,0,.03);
+    }
+    a.card:hover { border-color:#c7cad1; }
+    a.card:active { transform: translateY(1px); }
 
-      .titulo { font-weight: 700; font-size: 16px; margin-bottom: 6px; }
-      .chips { display: flex; gap: 6px; flex-wrap: wrap; }
-      .chip{
-        display: inline-flex; align-items: center; gap: 6px;
-        padding: 6px 8px; border-radius: 999px;
-        background: var(--chip); color: var(--muted);
-        font-size: 12px; border: 1px dashed #e5e7eb;
-      }
-      .icone-like{
-        font-size: 18px; color: var(--muted);
-        transition: color .15s, transform .06s;
-      }
-      a.card:hover .icone-like{ color:#9ca3af; }
-      .fav{ color: var(--heart); }
+    strong { font-weight: 700; font-size: 16px; display: block; margin-bottom: 6px; }
+    span.chip { 
+      display: inline-block; 
+      padding: 4px 6px; 
+      margin-right: 4px; 
+      border-radius: 999px; 
+      background: #f3f4f6; 
+      font-size: 12px; 
+      border: 1px dashed #e5e7eb; 
+      color: #6b7280;
+    }
+    span.heart { font-size: 18px; color: #ef4444; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Receitas</h1>
+  </header>
 
-      /* Rodapé pequeno para respiro como num app */
-      footer{ height: 6px; }
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>Receitas</h1>
-    </header>
+  <main>
+    <ul>
+      <li>
+        <a class="card" href="../NãoCriada.html" target="conteudo">
+          <div>
+            <strong>Omelete de Cogumelos</strong>
+            <span class="chip" title="Sem glúten">🥨 SG</span>
+            <span class="chip" title="Sem lactose">🥛 SL</span>
+            <span class="chip" title="Low carb">⚖️ LC</span>
+          </div>
+          <span class="heart">♡</span>
+        </a>
+      </li>
 
-    <main>
-      <ul>
-        <li>
-          <a class="card" href="../NãoCriada.html" target="conteudo" aria-label="Abrir Omelete de Cogumelos">
-            <div>
-              <div class="titulo">Omelete de Cogumelos</div>
-              <div class="chips" aria-label="Selo de características">
-                <span class="chip" title="Sem glúten">🥨 SG</span>
-                <span class="chip" title="Sem lactose">🥛 SL</span>
-                <span class="chip" title="Low carb">⚖️ LC</span>
-              </div>
-            </div>
-            <span class="icone-like fav" aria-hidden="true">♡</span>
-          </a>
-        </li>
+      <li>
+        <a class="card" href="../NãoCriada.html" target="conteudo">
+          <div>
+            <strong>Abobrinha Recheada</strong>
+            <span class="chip" title="Vegetariano">🥦 VG</span>
+            <span class="chip" title="Sem glúten">🥨 SG</span>
+            <span class="chip" title="Sem lactose">🥛 SL</span>
+          </div>
+          <span class="heart">♡</span>
+        </a>
+      </li>
 
-        <li>
-          <a class="card" href="../NãoCriada.html" target="conteudo" aria-label="Abrir Abobrinha Recheada">
-            <div>
-              <div class="titulo">Abobrinha Recheada</div>
-              <div class="chips">
-                <span class="chip" title="Vegetariano">🥦 VG</span>
-                <span class="chip" title="Sem glúten">🥨 SG</span>
-                <span class="chip" title="Sem lactose">🥛 SL</span>
-              </div>
-            </div>
-            <span class="icone-like" aria-hidden="true">♡</span>
-          </a>
-        </li>
+      <li>
+        <a class="card" href="../Receitas/Frango.html" target="conteudo">
+          <div>
+            <strong>Frango Crocante</strong>
+            <span class="chip" title="Rico em proteína">🍗 PRO</span>
+            <span class="chip" title="Air Fryer">🌀 AF</span>
+            <span class="chip" title="Baixo sódio">🧂 BS</span>
+          </div>
+          <span class="heart">♥</span>
+        </a>
+      </li>
 
-        <li>
-          <a class="card" href="../Receitas/Frango.html" target="conteudo" aria-label="Abrir Frango Crocante">
-            <div>
-              <div class="titulo">Frango Crocante</div>
-              <div class="chips">
-                <span class="chip" title="Rico em proteína">🍗 PRO</span>
-                <span class="chip" title="Air Fryer">🌀 AF</span>
-                <span class="chip" title="Baixo sódio">🧂 BS</span>
-              </div>
-            </div>
-            <span class="icone-like" aria-hidden="true">♥</span>
-          </a>
-        </li>
-
-        <li>
-          <a class="card" href="../NãoCriada.html" target="conteudo" aria-label="Abrir Banana Assada com Canela">
-            <div>
-              <div class="titulo">Banana Assada com Canela</div>
-              <div class="chips">
-                <span class="chip" title="Sem glúten">🥨 SG</span>
-                <span class="chip" title="Sem lactose">🥛 SL</span>
-                <span class="chip" title="Sem ovos">🥚 SO</span>
-              </div>
-            </div>
-            <span class="icone-like" aria-hidden="true">♡</span>
-          </a>
-        </li>
-      </ul>
-    </main>
-    <footer></footer>
-  </body>
+      <li>
+        <a class="card" href="../NãoCriada.html" target="conteudo">
+          <div>
+            <strong>Banana Assada com Canela</strong>
+            <span class="chip" title="Sem glúten">🥨 SG</span>
+            <span class="chip" title="Sem lactose">🥛 SL</span>
+            <span class="chip" title="Sem ovos">🥚 SO</span>
+          </div>
+          <span class="heart">♡</span>
+        </a>
+      </li>
+    </ul>
+  </main>
+</body>
 </html>
+
