--- a/Telas/Favoritos.html
+++ b/Telas/Favoritos.html
@@ -4,24 +4,6 @@
   <meta charset="UTF-8">
   <title>Favoritos – SIMPLeat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    html, body { height: 100%; margin: 0; font-family: sans-serif; }
-    body { display: flex; flex-direction: column; background: #fff; }
-    header { background: #f2f2f2; padding: 8px; text-align: center; }
-    header h1 { margin: 0; font-size: 16px; }
-    main { flex: 1; overflow: auto; padding: 10px; }
-    ul { list-style: none; margin: 0; padding: 0; }
-
-    a.card {
-      display: flex; justify-content: space-between; align-items: center;
-      border: 1px solid #ccc; border-radius: 8px;
-      padding: 10px; margin-bottom: 10px;
-      text-decoration: none; color: #000; background: #fff;
-    }
-    .titulo { font-weight: 700; display: block; }
-    .tempo { font-size: 12px; color: #555; display: block; }
-    .icone { font-size: 18px; margin-left: 8px; }
-  </style>
 </head>
 <body>
   <header>
@@ -31,57 +13,33 @@
   <main>
     <ul>
       <li>
-        <a class="card" href="NotFound.html" target="conteudo">
-          <span>
-            <span class="titulo">Purê de mandioquinha</span>
-            <span class="tempo">⏳ 30 min</span>
-          </span>
-          <span class="icone">❤️</span>
+        <a href="NotFound.html" target="conteudo">
+          Purê de mandioquinha ⏳ 30 min ❤️
         </a>
       </li>
       <li>
-        <a class="card" href="../Receitas/Frango.html" target="conteudo">
-          <span>
-            <span class="titulo">Frango crocante na Air Fryer</span>
-            <span class="tempo">⏳ 30 min</span>
-          </span>
-          <span class="icone">❤️</span>
+        <a href="../Receitas/Frango.html" target="conteudo">
+          Frango crocante na Air Fryer ⏳ 30 min ❤️
         </a>
       </li>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
-          <span>
-            <span class="titulo">Bolo de laranja</span>
-            <span class="tempo">⏳ 40 min</span>
-          </span>
-          <span class="icone">❤️</span>
+        <a href="../NãoCriada.html" target="conteudo">
+          Bolo de laranja ⏳ 40 min ❤️
         </a>
       </li>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
-          <span>
-            <span class="titulo">Carne de panela</span>
-            <span class="tempo">⏳ 25 min</span>
-          </span>
-          <span class="icone">❤️</span>
+        <a href="../NãoCriada.html" target="conteudo">
+          Carne de panela ⏳ 25 min ❤️
         </a>
       </li>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
-          <span>
-            <span class="titulo">Salada de frutas</span>
-            <span class="tempo">⏳ 10 min</span>
-          </span>
-          <span class="icone">❤️</span>
+        <a href="../NãoCriada.html" target="conteudo">
+          Salada de frutas ⏳ 10 min ❤️
         </a>
       </li>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
-          <span>
-            <span class="titulo">Mousse de maracujá</span>
-            <span class="tempo">⏳ 50 min</span>
-          </span>
-          <span class="icone">❤️</span>
+        <a href="../NãoCriada.html" target="conteudo">
+          Mousse de maracujá ⏳ 50 min ❤️
         </a>
       </li>
     </ul>
