--- a/Telas/Ingredientes2.html
+++ b/Telas/Ingredientes2.html
@@ -1,36 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Receitas de Frango – SIMPLeat</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    :root { --b:#1f2937; --bd:#d1d5db; }
-    html, body { height:100%; margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; }
-    body { display:flex; flex-direction:column; background:#fff; color:var(--b); }
-    header { background:#f2f2f2; border-bottom:1px solid #e5e7eb; padding:10px; text-align:center; }
-    header h1 { margin:0; font-size:16px; }
-    main { flex:1; min-height:0; overflow:auto; padding:14px; }
-    .lista { list-style:none; margin:0; padding:0; display:grid; gap:10px; }
-    a.pill{
-      display:block; text-decoration:none; color:#111;
-      border:1px solid var(--bd); background:#fff;
-      border-radius:999px; padding:12px 14px; font-weight:600;
-      transition:border-color .15s, transform .06s;
-    }
-    a.pill:hover { border-color:#c7cad1; }
-    a.pill:active { transform:translateY(1px); }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <header><h1>Receitas de Frango</h1></header>
+  <header>
+    <h1>Receitas de Frango</h1>
+  </header>
 
   <main>
-    <ul class="lista">
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Torta de Frango</a></li>
-      <li><a class="pill" href="../Receitas/Frango.html" target="conteudo">Frango Crocante</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Salada de Frango</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Escondidinho de Frango</a></li>
+    <ul>
+      <li><a href="../NãoCriada.html" target="conteudo">Torta de Frango</a></li>
+      <li><a href="../Receitas/Frango.html" target="conteudo">Frango Crocante</a></li>
+      <li><a href="../NãoCriada.html" target="conteudo">Salada de Frango</a></li>
+      <li><a href="../NãoCriada.html" target="conteudo">Escondidinho de Frango</a></li>
     </ul>
   </main>
 </body>
