--- a/Telas/Tempo2.html
+++ b/Telas/Tempo2.html
@@ -4,24 +4,6 @@
   <meta charset="UTF-8">
   <title>Receitas por tempo – SIMPLeat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body { margin: 0; font-family: sans-serif; background: #fff; }
-    header { background: #f2f2f2; padding: 8px; text-align: center; border-bottom: 1px solid #ccc; }
-    header h1 { margin: 0; font-size: 16px; }
-
-    main { padding: 10px; }
-    ul { list-style: none; margin: 0; padding: 0; }
-    li { margin-bottom: 10px; }
-
-    a.card {
-      display: flex; justify-content: space-between; align-items: center;
-      padding: 10px; border: 1px solid #ccc; border-radius: 8px;
-      text-decoration: none; color: #000; background: #fff;
-    }
-    a.card span { font-size: 12px; color: #555; }
-    a.card strong { font-weight: bold; color: #000; }
-    a.card .heart { font-size: 18px; color: red; }
-  </style>
 </head>
 <body>
   <header>
@@ -31,39 +13,27 @@
   <main>
     <ul>
       <li>
-        <a class="card" href="../NaoCriada.html" target="conteudo">
-          <div>
-            <strong>Mac and Cheese</strong><br>
-            <span>tempo: 35 min</span>
-          </div>
-          <div class="heart">♡</div>
+        <a href="../NaoCriada.html" target="conteudo">
+          <strong>Mac and Cheese</strong><br>
+          <span>tempo: 35 min</span> ♡
         </a>
       </li>
       <li>
-        <a class="card" href="../Receitas/Frango.html" target="conteudo">
-          <div>
-            <strong>Frango crocante na Air Fryer</strong><br>
-            <span>tempo: 30 min</span>
-          </div>
-          <div class="heart">♥</div>
+        <a href="../Receitas/Frango.html" target="conteudo">
+          <strong>Frango crocante na Air Fryer</strong><br>
+          <span>tempo: 30 min</span> ♥
         </a>
       </li>
       <li>
-        <a class="card" href="../NaoCriada.html" target="conteudo">
-          <div>
-            <strong>Purê de batata</strong><br>
-            <span>tempo: 30 min</span>
-          </div>
-          <div class="heart">♡</div>
+        <a href="../NaoCriada.html" target="conteudo">
+          <strong>Purê de batata</strong><br>
+          <span>tempo: 30 min</span> ♡
         </a>
       </li>
       <li>
-        <a class="card" href="../NaoCriada.html" target="conteudo">
-          <div>
-            <strong>Arroz com brócolis</strong><br>
-            <span>tempo: 30 min</span>
-          </div>
-          <div class="heart">♡</div>
+        <a href="../NaoCriada.html" target="conteudo">
+          <strong>Arroz com brócolis</strong><br>
+          <span>tempo: 30 min</span> ♡
         </a>
       </li>
     </ul>
