--- a/index.html
+++ b/index.html
@@ -3,34 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>SIMPLeat</title>
-    <style>
-      html, body { height: 100%; margin: 0; font-family: sans-serif; }
-      body { display: flex; align-items: center; justify-content: center; background: #e5e5e5; }
-      .phone { width: 375px; height: 667px; background: #fff; border: 1px solid #d0c5cd; border-radius: 16px; overflow: hidden; display: flex; flex-direction: column; }
-      header { background: #dcaad0; padding: 8px; text-align: center; }
-        header h1 {
-    margin: 0;
-    font-size: 28px;    
-    font-weight: 900;   
-    color: #fff;        
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.3); 
-    font-family: "Segoe UI", Roboto, sans-serif;
-  }
-      main { flex: 1; background: #fff; }
-      main iframe { width: 100%; height: 100%; border: none; }
-      nav { display: flex; justify-content: space-around; background: #dcaad0; padding: 8px 0; }
-      nav a { text-decoration: none; font-size: 20px; color: #000; }
-    </style>
   </head>
   <body>
-    <div class="phone">
+    <div class="phone" align="center">
       <header>
-        <h1>SIMPLeat</h1>
+        <h1 align="center">SIMPLeat</h1>
       </header>
+
       <main>
-        <iframe src="Telas/Favoritos.html" name="conteudo"></iframe>
+        <iframe src="Telas/Favoritos.html" name="conteudo" width="360" height="500"></iframe>
       </main>
-      <nav>
+
+      <nav align="center">
         <a href="Telas/Favoritos.html" target="conteudo">⭐</a>
         <a href="Telas/Restrições.html" target="conteudo">🚫</a>
         <a href="Telas/Tempo.html" target="conteudo">⏳</a>
