--- a/Favoritos.html
+++ b/Favoritos.html
@@ -13,32 +13,32 @@
   <main>
     <ul>
       <li>
-        <a href="NotFound.html" target="conteudo">
+        <a href="NãoCriada.html" target="conteudo">
           Purê de mandioquinha ⏳ 30 min ❤️
         </a>
       </li>
       <li>
-        <a href="../Receitas/Frango.html" target="conteudo">
+        <a href="Frango.html" target="conteudo">
           Frango crocante na Air Fryer ⏳ 30 min ❤️
         </a>
       </li>
       <li>
-        <a href="../NãoCriada.html" target="conteudo">
+        <a href="NãoCriada.html" target="conteudo">
           Bolo de laranja ⏳ 40 min ❤️
         </a>
       </li>
       <li>
-        <a href="../NãoCriada.html" target="conteudo">
+        <a href="NãoCriada.html" target="conteudo">
           Carne de panela ⏳ 25 min ❤️
         </a>
       </li>
       <li>
-        <a href="../NãoCriada.html" target="conteudo">
+        <a href="NãoCriada.html" target="conteudo">
           Salada de frutas ⏳ 10 min ❤️
         </a>
       </li>
       <li>
-        <a href="../NãoCriada.html" target="conteudo">
+        <a href="NãoCriada.html" target="conteudo">
           Mousse de maracujá ⏳ 50 min ❤️
         </a>
       </li>
