--- a/Frango.html
+++ b/Frango.html
@@ -14,7 +14,7 @@
     <p>⏳ 30 minutos</p>
 
     <div>
-      <img src="../Imagens/frango.jpg" alt="Frango assado crocante" width="100%" />
+      <img src="img/frango.jpg" alt="Frango assado crocante" width="100%" />
     </div>
 
     <h2>Ingredientes</h2>
