--- a/Restrições2.html
+++ b/Restrições2.html
@@ -13,16 +13,16 @@
   <main>
     <ul>
       <li>
-        <a href="../NaoCriada.html" target="conteudo">Omelete de Cogumelos ♡</a>
+        <a href="NaoCriada.html" target="conteudo">Omelete de Cogumelos ♡</a>
       </li>
       <li>
-        <a href="../NaoCriada.html" target="conteudo">Abobrinha Recheada ♡</a>
+        <a href="NaoCriada.html" target="conteudo">Abobrinha Recheada ♡</a>
       </li>
       <li>
-        <a href="../Receitas/Frango.html" target="conteudo">Frango Crocante ♥</a>
+        <a href="Frango.html" target="conteudo">Frango Crocante ♥</a>
       </li>
       <li>
-        <a href="../NaoCriada.html" target="conteudo">Banana Assada com Canela ♡</a>
+        <a href="NaoCriada.html" target="conteudo">Banana Assada com Canela ♡</a>
       </li>
     </ul>
   </main>
