--- a/Tempo2.html
+++ b/Tempo2.html
@@ -13,25 +13,25 @@
   <main>
     <ul>
       <li>
-        <a href="../NaoCriada.html" target="conteudo">
+        <a href="NaoCriada.html" target="conteudo">
           <strong>Mac and Cheese</strong><br>
           <span>tempo: 35 min</span> ♡
         </a>
       </li>
       <li>
-        <a href="../Receitas/Frango.html" target="conteudo">
+        <a href="Frango.html" target="conteudo">
           <strong>Frango crocante na Air Fryer</strong><br>
           <span>tempo: 30 min</span> ♥
         </a>
       </li>
       <li>
-        <a href="../NaoCriada.html" target="conteudo">
+        <a href="NaoCriada.html" target="conteudo">
           <strong>Purê de batata</strong><br>
           <span>tempo: 30 min</span> ♡
         </a>
       </li>
       <li>
-        <a href="../NaoCriada.html" target="conteudo">
+        <a href="NaoCriada.html" target="conteudo">
           <strong>Arroz com brócolis</strong><br>
           <span>tempo: 30 min</span> ♡
         </a>
