--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <title>SIMPLeat</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="phone" align="center">
+    <div class="phone">
       <header>
-        <h1 align="center">SIMPLeat</h1>
+        <h1>SIMPLeat</h1>
       </header>
 
       <main>
-        <iframe src="Telas/Favoritos.html" name="conteudo" width="360" height="500"></iframe>
+        <iframe src="Favoritos.html" name="conteudo" width="360" height="500" title="Conteúdo do SIMPLeat"></iframe>
       </main>
 
-      <nav align="center">
-        <a href="Telas/Favoritos.html" target="conteudo">⭐</a>
-        <a href="Telas/Restrições.html" target="conteudo">🚫</a>
-        <a href="Telas/Tempo.html" target="conteudo">⏳</a>
-        <a href="Telas/Ingredientes.html" target="conteudo">🍲</a>
+      <nav>
+        <a href="Favoritos.html" target="conteudo" aria-label="Favoritos">⭐</a>
+        <a href="Restrições.html" target="conteudo" aria-label="Restrições">🚫</a>
+        <a href="Tempo.html" target="conteudo" aria-label="Tempo">⏳</a>
+        <a href="Ingredientes.html" target="conteudo" aria-label="Ingredientes">🍲</a>
       </nav>
     </div>
   </body>
