Bugs dos ajustes

--- a/Favoritos.html
+++ b/Favoritos.html
@@ -31,7 +31,7 @@
   <main>
     <ul>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
+        <a class="card" href="NãoCriada.html" target="conteudo">
           <span>
             <span class="titulo">Purê de mandioquinha</span>
             <span class="tempo">⏳ 30 min</span>
@@ -40,7 +40,7 @@
         </a>
       </li>
       <li>
-        <a class="card" href="../Receitas/Frango.html" target="conteudo">
+        <a class="card" href="Frango.html" target="conteudo">
           <span>
             <span class="titulo">Frango crocante na Air Fryer</span>
             <span class="tempo">⏳ 30 min</span>
@@ -49,7 +49,7 @@
         </a>
       </li>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
+        <a class="card" href="NãoCriada.html" target="conteudo">
           <span>
             <span class="titulo">Bolo de laranja</span>
             <span class="tempo">⏳ 40 min</span>
@@ -58,7 +58,7 @@
         </a>
       </li>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
+        <a class="card" href="NãoCriada.html" target="conteudo">
           <span>
             <span class="titulo">Carne de panela</span>
             <span class="tempo">⏳ 25 min</span>
@@ -67,7 +67,7 @@
         </a>
       </li>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
+        <a class="card" href="NãoCriada.html" target="conteudo">
           <span>
             <span class="titulo">Salada de frutas</span>
             <span class="tempo">⏳ 10 min</span>
@@ -76,7 +76,7 @@
         </a>
       </li>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
+        <a class="card" href="NãoCriada.html" target="conteudo">
           <span>
             <span class="titulo">Mousse de maracujá</span>
             <span class="tempo">⏳ 50 min</span>
