--- a/Ingredientes2.html
+++ b/Ingredientes2.html
@@ -27,10 +27,10 @@
 
   <main>
     <ul class="lista">
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Torta de Frango</a></li>
-      <li><a class="pill" href="../Receitas/Frango.html" target="conteudo">Frango Crocante</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Salada de Frango</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Escondidinho de Frango</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Torta de Frango</a></li>
+      <li><a class="pill" href="Frango.html" target="conteudo">Frango Crocante</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Salada de Frango</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Escondidinho de Frango</a></li>
     </ul>
   </main>
 </body>
