--- a/Restrições2.html
+++ b/Restrições2.html
@@ -49,7 +49,7 @@
   <main>
     <ul>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
+        <a class="card" href="NãoCriada.html" target="conteudo">
           <div>
             <strong>Omelete de Cogumelos</strong>
             <span class="chip" title="Sem glúten">🥨 SG</span>
@@ -61,7 +61,7 @@
       </li>
 
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
+        <a class="card" href="NãoCriada.html" target="conteudo">
           <div>
             <strong>Abobrinha Recheada</strong>
             <span class="chip" title="Vegetariano">🥦 VG</span>
@@ -73,7 +73,7 @@
       </li>
 
       <li>
-        <a class="card" href="../Receitas/Frango.html" target="conteudo">
+        <a class="card" href="Frango.html" target="conteudo">
           <div>
             <strong>Frango Crocante</strong>
             <span class="chip" title="Rico em proteína">🍗 PRO</span>
@@ -85,7 +85,7 @@
       </li>
 
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
+        <a class="card" href="NãoCriada.html" target="conteudo">
           <div>
             <strong>Banana Assada com Canela</strong>
             <span class="chip" title="Sem glúten">🥨 SG</span>
