--- a/Tempo2.html
+++ b/Tempo2.html
@@ -31,7 +31,7 @@
   <main>
     <ul>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
+        <a class="card" href="NãoCriada.html" target="conteudo">
           <div>
             <strong>Mac and Cheese</strong><br>
             <span>tempo: 35 min</span>
@@ -40,7 +40,7 @@
         </a>
       </li>
       <li>
-        <a class="card" href="../Receitas/Frango.html" target="conteudo">
+        <a class="card" href="Frango.html" target="conteudo">
           <div>
             <strong>Frango crocante na Air Fryer</strong><br>
             <span>tempo: 30 min</span>
@@ -49,7 +49,7 @@
         </a>
       </li>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
+        <a class="card" href="NãoCriada.html" target="conteudo">
           <div>
             <strong>Purê de batata</strong><br>
             <span>tempo: 30 min</span>
@@ -58,7 +58,7 @@
         </a>
       </li>
       <li>
-        <a class="card" href="../NãoCriada.html" target="conteudo">
+        <a class="card" href="NãoCriada.html" target="conteudo">
           <div>
             <strong>Arroz com brócolis</strong><br>
             <span>tempo: 30 min</span>
