--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <h1>SIMPLeat</h1>
       </header>
       <main>
-        <iframe src="Telas/Favoritos.html" name="conteudo"></iframe>
+        <iframe src="Favoritos.html" name="conteudo"></iframe>
       </main>
       <nav>
-        <a href="Telas/Favoritos.html" target="conteudo">⭐</a>
-        <a href="Telas/Restrições.html" target="conteudo">🚫</a>
-        <a href="Telas/Tempo.html" target="conteudo">⏳</a>
-        <a href="Telas/Ingredientes.html" target="conteudo">🍲</a>
+        <a href="Favoritos.html" target="conteudo">⭐</a>
+        <a href="Restrições.html" target="conteudo">🚫</a>
+        <a href="Tempo.html" target="conteudo">⏳</a>
+        <a href="Ingredientes.html" target="conteudo">🍲</a>
       </nav>
     </div>
   </body>
