--- a/Frango.html
+++ b/Frango.html
@@ -33,7 +33,7 @@
 
     <div class="foto">
       <!-- use a imagem fornecida no repositório -->
-      <img src="../Imagens/frango.jpg" alt="Frango assado crocante" />
+      <img src="img/frango.jpg" alt="Frango assado crocante" />
     </div>
 
     <h2>Ingredientes</h2>
@@ -59,7 +59,6 @@
       <li>Sirva quente.</li>
     </ol>
 
-    <!-- Texto extra só para garantir rolagem confortável em iframes menores -->
     <p style="color:#6b7280;font-size:13px; margin-bottom:24px;">
       Dica: ajuste o tempo conforme o tamanho dos pedaços e o modelo da sua Air Fryer.
     </p>
