--- a/Ingredientes.html
+++ b/Ingredientes.html
@@ -27,20 +27,20 @@
 
   <main>
     <ul class="lista">
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Abóbora</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Banana</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Cenoura</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Carne de boi</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Ervilha</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Abóbora</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Banana</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Cenoura</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Carne de boi</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Ervilha</a></li>
       <li><a class="pill" href="Ingredientes2.html" target="conteudo">Frango</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Granola</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Laranja</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Linhaça</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Macarrão</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Mamão</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Nozes</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Presunto</a></li>
-      <li><a class="pill" href="../NãoCriada.html" target="conteudo">Queijo</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Granola</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Laranja</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Linhaça</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Macarrão</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Mamão</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Nozes</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Presunto</a></li>
+      <li><a class="pill" href="NãoCriada.html" target="conteudo">Queijo</a></li>
     </ul>
   </main>
 </body>
