--- a/Ingredientes2.html
+++ b/Ingredientes2.html
@@ -4,29 +4,17 @@
   <meta charset="UTF-8" />
   <title>Receitas de Frango – SIMPLeat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    :root { --b:#1f2937; --bd:#d1d5db; }
-    html, body { height:100%; margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; }
-    body { display:flex; flex-direction:column; background:#fff; color:var(--b); }
-    header { background:#f2f2f2; border-bottom:1px solid #e5e7eb; padding:10px; text-align:center; }
-    header h1 { margin:0; font-size:16px; }
-    main { flex:1; min-height:0; overflow:auto; padding:14px; }
-    .lista { list-style:none; margin:0; padding:0; display:grid; gap:10px; }
-    a.pill{
-      display:block; text-decoration:none; color:#111;
-      border:1px solid var(--bd); background:#fff;
-      border-radius:999px; padding:12px 14px; font-weight:600;
-      transition:border-color .15s, transform .06s;
-    }
-    a.pill:hover { border-color:#c7cad1; }
-    a.pill:active { transform:translateY(1px); }
-  </style>
+  <link rel="preload" href="css/styles.css" as="style">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-  <header><h1>Receitas de Frango</h1></header>
+<body class="app">
+  <header class="site-header" role="banner">
+    <h1 class="site-title">Receitas de Frango</h1>
+  </header>
 
-  <main>
-    <ul class="lista">
+  <main class="site-main" role="main">
+    <ul class="card-list list-grid" role="list">
       <li><a class="pill" href="NãoCriada.html" target="conteudo">Torta de Frango</a></li>
       <li><a class="pill" href="Frango.html" target="conteudo">Frango Crocante</a></li>
       <li><a class="pill" href="NãoCriada.html" target="conteudo">Salada de Frango</a></li>
