--- a/Ingredientes.html
+++ b/Ingredientes.html
@@ -8,29 +8,18 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="app">
+<body class="app" data-pagina="ingredientes1">
   <header class="site-header" role="banner">
     <h1 class="site-title">Selecione o ingrediente</h1>
   </header>
 
   <main class="site-main" role="main">
     <ul class="card-list list-grid" role="list">
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Abóbora</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Banana</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Cenoura</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Carne de boi</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Ervilha</a></li>
-      <li><a class="pill" href="Ingredientes2.html" target="conteudo">Frango</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Granola</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Laranja</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Linhaça</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Macarrão</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Mamão</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Nozes</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Presunto</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Queijo</a></li>
+      <!-- preenchido via JS -->
     </ul>
   </main>
+
+  <script src="js/Global.js"></script>
+  <script src="js/ingredientes.js"></script>
 </body>
 </html>
-
