--- a/Restrições.html
+++ b/Restrições.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="app">
+<body class="app" data-pagina="restricoes1">
   <header class="site-header" role="banner">
     <h1 class="site-title">Selecione suas restrições</h1>
   </header>
@@ -61,5 +61,8 @@
   </main>
 
   <a class="pill fab" href="Restrições2.html" target="conteudo" aria-label="Próximo">→</a>
+
+  <script src="js/Global.js"></script>
+  <script src="js/Restricoes.js"></script>
 </body>
 </html>
