--- a/Restrições2.html
+++ b/Restrições2.html
@@ -2,67 +2,24 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Receitas – SIMPLeat</title>
+  <title>Receitas por restrições – SIMPLeat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preload" href="css/styles.css" as="style">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="app">
+<body class="app" data-pagina="restricoes2">
   <header class="site-header" role="banner">
-    <h1 class="site-title">Receitas</h1>
+    <h1 class="site-title">Receitas por restrições</h1>
   </header>
 
   <main class="site-main" role="main">
     <ul class="card-list list-grid" role="list">
-      <li>
-        <a class="card" href="NãoCriada.html" target="conteudo" aria-label="Omelete de Cogumelos">
-          <div class="card__text">
-            <span class="titulo">Omelete de Cogumelos</span>
-            <span class="chip" title="Sem glúten">🥨 SG</span>
-            <span class="chip" title="Sem lactose">🥛 SL</span>
-            <span class="chip" title="Low carb">⚖️ LC</span>
-          </div>
-          <span class="icone" aria-hidden="true">♡</span>
-        </a>
-      </li>
-
-      <li>
-        <a class="card" href="NãoCriada.html" target="conteudo" aria-label="Abobrinha Recheada">
-          <div class="card__text">
-            <span class="titulo">Abobrinha Recheada</span>
-            <span class="chip" title="Vegetariano">🥦 VG</span>
-            <span class="chip" title="Sem glúten">🥨 SG</span>
-            <span class="chip" title="Sem lactose">🥛 SL</span>
-          </div>
-          <span class="icone" aria-hidden="true">♡</span>
-        </a>
-      </li>
-
-      <li>
-        <a class="card" href="Frango.html" target="conteudo" aria-label="Frango Crocante">
-          <div class="card__text">
-            <span class="titulo">Frango Crocante</span>
-            <span class="chip" title="Rico em proteína">🍗 PRO</span>
-            <span class="chip" title="Air Fryer">🌀 AF</span>
-            <span class="chip" title="Baixo sódio">🧂 BS</span>
-          </div>
-          <span class="icone" aria-hidden="true">♥</span>
-        </a>
-      </li>
-
-      <li>
-        <a class="card" href="NãoCriada.html" target="conteudo" aria-label="Banana Assada com Canela">
-          <div class="card__text">
-            <span class="titulo">Banana Assada com Canela</span>
-            <span class="chip" title="Sem glúten">🥨 SG</span>
-            <span class="chip" title="Sem lactose">🥛 SL</span>
-            <span class="chip" title="Sem ovos">🥚 SO</span>
-          </div>
-          <span class="icone" aria-hidden="true">♡</span>
-        </a>
-      </li>
+      <!-- preenchido via JS -->
     </ul>
   </main>
+
+  <script src="js/Global.js"></script>
+  <script src="js/Restricoes.js"></script>
 </body>
 </html>
