--- a/Ingredientes2.html
+++ b/Ingredientes2.html
@@ -2,24 +2,24 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Receitas de Frango – SIMPLeat</title>
+  <title>Receitas por ingrediente – SIMPLeat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="preload" href="css/styles.css" as="style">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="app">
+<body class="app" data-pagina="ingredientes2">
   <header class="site-header" role="banner">
-    <h1 class="site-title">Receitas de Frango</h1>
+    <h1 class="site-title">Receitas por ingrediente</h1>
   </header>
 
   <main class="site-main" role="main">
     <ul class="card-list list-grid" role="list">
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Torta de Frango</a></li>
-      <li><a class="pill" href="Frango.html" target="conteudo">Frango Crocante</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Salada de Frango</a></li>
-      <li><a class="pill" href="NãoCriada.html" target="conteudo">Escondidinho de Frango</a></li>
+      <!-- preenchido via JS -->
     </ul>
   </main>
+
+  <script src="js/Global.js"></script>
+  <script src="js/ingredientes.js"></script>
 </body>
 </html>
